sql_engine/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD

Grammar

Rule 0     S' -> sql_stam
Rule 1     sql_stam -> select_stam
Rule 2     sql_stam -> insert_stam
Rule 3     sql_stam -> update_stam
Rule 4     sql_stam -> delete_stam
Rule 5     select_stam -> SELECT attr_list cond_stam
Rule 6     insert_stam -> INSERT attr_list VALUES values_list
Rule 7     update_stam -> UPDATE SET assg_stam cond_stam
Rule 8     delete_stam -> DELETE cond_stam
Rule 9     attr_list -> attr COMMA attr_list
Rule 10    attr_list -> attr
Rule 11    attr_list -> STAR
Rule 12    attr_list -> empty
Rule 13    attr -> STR
Rule 14    cond_stam -> WHERE or_cond
Rule 15    cond_stam -> empty
Rule 16    or_cond -> or_cond OR and_cond
Rule 17    or_cond -> cond
Rule 18    and_cond -> and_cond AND cond
Rule 19    and_cond -> cond
Rule 20    cond -> STR pred value
Rule 21    pred -> EQ
Rule 22    pred -> NE
Rule 23    pred -> LT
Rule 24    pred -> LE
Rule 25    pred -> GT
Rule 26    pred -> GE
Rule 27    pred -> LIKE
Rule 28    values_list -> value COMMA values_list
Rule 29    values_list -> value
Rule 30    value -> STR
Rule 31    value -> NUMBER
Rule 32    value -> BOOL
Rule 33    assg_stam -> assg COMMA assg_stam
Rule 34    assg_stam -> assg
Rule 35    assg -> STR EQ value
Rule 36    empty -> <empty>

Terminals, with rules where they appear

AND                  : 18
BOOL                 : 32
COMMA                : 9 28 33
DELETE               : 8
EQ                   : 21 35
GE                   : 26
GT                   : 25
INSERT               : 6
KEYWORD              : 
LE                   : 24
LIKE                 : 27
LT                   : 23
NE                   : 22
NUMBER               : 31
OR                   : 16
SELECT               : 5
SET                  : 7
STAR                 : 11
STR                  : 13 20 30 35
UPDATE               : 7
VALUES               : 6
WHERE                : 14
error                : 

Nonterminals, with rules where they appear

and_cond             : 16 18
assg                 : 33 34
assg_stam            : 7 33
attr                 : 9 10
attr_list            : 5 6 9
cond                 : 17 18 19
cond_stam            : 5 7 8
delete_stam          : 4
empty                : 12 15
insert_stam          : 2
or_cond              : 14 16
pred                 : 20
select_stam          : 1
sql_stam             : 0
update_stam          : 3
value                : 20 28 29 35
values_list          : 6 28

Parsing method: LALR

state 0

    (0) S' -> . sql_stam
    (1) sql_stam -> . select_stam
    (2) sql_stam -> . insert_stam
    (3) sql_stam -> . update_stam
    (4) sql_stam -> . delete_stam
    (5) select_stam -> . SELECT attr_list cond_stam
    (6) insert_stam -> . INSERT attr_list VALUES values_list
    (7) update_stam -> . UPDATE SET assg_stam cond_stam
    (8) delete_stam -> . DELETE cond_stam

    SELECT          shift and go to state 6
    INSERT          shift and go to state 7
    UPDATE          shift and go to state 8
    DELETE          shift and go to state 9

    sql_stam                       shift and go to state 1
    select_stam                    shift and go to state 2
    insert_stam                    shift and go to state 3
    update_stam                    shift and go to state 4
    delete_stam                    shift and go to state 5

state 1

    (0) S' -> sql_stam .



state 2

    (1) sql_stam -> select_stam .

    $end            reduce using rule 1 (sql_stam -> select_stam .)


state 3

    (2) sql_stam -> insert_stam .

    $end            reduce using rule 2 (sql_stam -> insert_stam .)


state 4

    (3) sql_stam -> update_stam .

    $end            reduce using rule 3 (sql_stam -> update_stam .)


state 5

    (4) sql_stam -> delete_stam .

    $end            reduce using rule 4 (sql_stam -> delete_stam .)


state 6

    (5) select_stam -> SELECT . attr_list cond_stam
    (9) attr_list -> . attr COMMA attr_list
    (10) attr_list -> . attr
    (11) attr_list -> . STAR
    (12) attr_list -> . empty
    (13) attr -> . STR
    (36) empty -> .

    STAR            shift and go to state 12
    STR             shift and go to state 14
    WHERE           reduce using rule 36 (empty -> .)
    $end            reduce using rule 36 (empty -> .)

    attr_list                      shift and go to state 10
    attr                           shift and go to state 11
    empty                          shift and go to state 13

state 7

    (6) insert_stam -> INSERT . attr_list VALUES values_list
    (9) attr_list -> . attr COMMA attr_list
    (10) attr_list -> . attr
    (11) attr_list -> . STAR
    (12) attr_list -> . empty
    (13) attr -> . STR
    (36) empty -> .

    STAR            shift and go to state 12
    STR             shift and go to state 14
    VALUES          reduce using rule 36 (empty -> .)

    attr_list                      shift and go to state 15
    attr                           shift and go to state 11
    empty                          shift and go to state 13

state 8

    (7) update_stam -> UPDATE . SET assg_stam cond_stam

    SET             shift and go to state 16


state 9

    (8) delete_stam -> DELETE . cond_stam
    (14) cond_stam -> . WHERE or_cond
    (15) cond_stam -> . empty
    (36) empty -> .

    WHERE           shift and go to state 18
    $end            reduce using rule 36 (empty -> .)

    cond_stam                      shift and go to state 17
    empty                          shift and go to state 19

state 10

    (5) select_stam -> SELECT attr_list . cond_stam
    (14) cond_stam -> . WHERE or_cond
    (15) cond_stam -> . empty
    (36) empty -> .

    WHERE           shift and go to state 18
    $end            reduce using rule 36 (empty -> .)

    cond_stam                      shift and go to state 20
    empty                          shift and go to state 19

state 11

    (9) attr_list -> attr . COMMA attr_list
    (10) attr_list -> attr .

    COMMA           shift and go to state 21
    WHERE           reduce using rule 10 (attr_list -> attr .)
    $end            reduce using rule 10 (attr_list -> attr .)
    VALUES          reduce using rule 10 (attr_list -> attr .)


state 12

    (11) attr_list -> STAR .

    WHERE           reduce using rule 11 (attr_list -> STAR .)
    $end            reduce using rule 11 (attr_list -> STAR .)
    VALUES          reduce using rule 11 (attr_list -> STAR .)


state 13

    (12) attr_list -> empty .

    WHERE           reduce using rule 12 (attr_list -> empty .)
    $end            reduce using rule 12 (attr_list -> empty .)
    VALUES          reduce using rule 12 (attr_list -> empty .)


state 14

    (13) attr -> STR .

    COMMA           reduce using rule 13 (attr -> STR .)
    WHERE           reduce using rule 13 (attr -> STR .)
    $end            reduce using rule 13 (attr -> STR .)
    VALUES          reduce using rule 13 (attr -> STR .)


state 15

    (6) insert_stam -> INSERT attr_list . VALUES values_list

    VALUES          shift and go to state 22


state 16

    (7) update_stam -> UPDATE SET . assg_stam cond_stam
    (33) assg_stam -> . assg COMMA assg_stam
    (34) assg_stam -> . assg
    (35) assg -> . STR EQ value

    STR             shift and go to state 25

    assg_stam                      shift and go to state 23
    assg                           shift and go to state 24

state 17

    (8) delete_stam -> DELETE cond_stam .

    $end            reduce using rule 8 (delete_stam -> DELETE cond_stam .)


state 18

    (14) cond_stam -> WHERE . or_cond
    (16) or_cond -> . or_cond OR and_cond
    (17) or_cond -> . cond
    (20) cond -> . STR pred value

    STR             shift and go to state 28

    or_cond                        shift and go to state 26
    cond                           shift and go to state 27

state 19

    (15) cond_stam -> empty .

    $end            reduce using rule 15 (cond_stam -> empty .)


state 20

    (5) select_stam -> SELECT attr_list cond_stam .

    $end            reduce using rule 5 (select_stam -> SELECT attr_list cond_stam .)


state 21

    (9) attr_list -> attr COMMA . attr_list
    (9) attr_list -> . attr COMMA attr_list
    (10) attr_list -> . attr
    (11) attr_list -> . STAR
    (12) attr_list -> . empty
    (13) attr -> . STR
    (36) empty -> .

    STAR            shift and go to state 12
    STR             shift and go to state 14
    WHERE           reduce using rule 36 (empty -> .)
    $end            reduce using rule 36 (empty -> .)
    VALUES          reduce using rule 36 (empty -> .)

    attr                           shift and go to state 11
    attr_list                      shift and go to state 29
    empty                          shift and go to state 13

state 22

    (6) insert_stam -> INSERT attr_list VALUES . values_list
    (28) values_list -> . value COMMA values_list
    (29) values_list -> . value
    (30) value -> . STR
    (31) value -> . NUMBER
    (32) value -> . BOOL

    STR             shift and go to state 32
    NUMBER          shift and go to state 33
    BOOL            shift and go to state 34

    values_list                    shift and go to state 30
    value                          shift and go to state 31

state 23

    (7) update_stam -> UPDATE SET assg_stam . cond_stam
    (14) cond_stam -> . WHERE or_cond
    (15) cond_stam -> . empty
    (36) empty -> .

    WHERE           shift and go to state 18
    $end            reduce using rule 36 (empty -> .)

    cond_stam                      shift and go to state 35
    empty                          shift and go to state 19

state 24

    (33) assg_stam -> assg . COMMA assg_stam
    (34) assg_stam -> assg .

    COMMA           shift and go to state 36
    WHERE           reduce using rule 34 (assg_stam -> assg .)
    $end            reduce using rule 34 (assg_stam -> assg .)


state 25

    (35) assg -> STR . EQ value

    EQ              shift and go to state 37


state 26

    (14) cond_stam -> WHERE or_cond .
    (16) or_cond -> or_cond . OR and_cond

    $end            reduce using rule 14 (cond_stam -> WHERE or_cond .)
    OR              shift and go to state 38


state 27

    (17) or_cond -> cond .

    OR              reduce using rule 17 (or_cond -> cond .)
    $end            reduce using rule 17 (or_cond -> cond .)


state 28

    (20) cond -> STR . pred value
    (21) pred -> . EQ
    (22) pred -> . NE
    (23) pred -> . LT
    (24) pred -> . LE
    (25) pred -> . GT
    (26) pred -> . GE
    (27) pred -> . LIKE

    EQ              shift and go to state 40
    NE              shift and go to state 41
    LT              shift and go to state 42
    LE              shift and go to state 43
    GT              shift and go to state 44
    GE              shift and go to state 45
    LIKE            shift and go to state 46

    pred                           shift and go to state 39

state 29

    (9) attr_list -> attr COMMA attr_list .

    WHERE           reduce using rule 9 (attr_list -> attr COMMA attr_list .)
    $end            reduce using rule 9 (attr_list -> attr COMMA attr_list .)
    VALUES          reduce using rule 9 (attr_list -> attr COMMA attr_list .)


state 30

    (6) insert_stam -> INSERT attr_list VALUES values_list .

    $end            reduce using rule 6 (insert_stam -> INSERT attr_list VALUES values_list .)


state 31

    (28) values_list -> value . COMMA values_list
    (29) values_list -> value .

    COMMA           shift and go to state 47
    $end            reduce using rule 29 (values_list -> value .)


state 32

    (30) value -> STR .

    COMMA           reduce using rule 30 (value -> STR .)
    $end            reduce using rule 30 (value -> STR .)
    WHERE           reduce using rule 30 (value -> STR .)
    OR              reduce using rule 30 (value -> STR .)
    AND             reduce using rule 30 (value -> STR .)


state 33

    (31) value -> NUMBER .

    COMMA           reduce using rule 31 (value -> NUMBER .)
    $end            reduce using rule 31 (value -> NUMBER .)
    WHERE           reduce using rule 31 (value -> NUMBER .)
    OR              reduce using rule 31 (value -> NUMBER .)
    AND             reduce using rule 31 (value -> NUMBER .)


state 34

    (32) value -> BOOL .

    COMMA           reduce using rule 32 (value -> BOOL .)
    $end            reduce using rule 32 (value -> BOOL .)
    WHERE           reduce using rule 32 (value -> BOOL .)
    OR              reduce using rule 32 (value -> BOOL .)
    AND             reduce using rule 32 (value -> BOOL .)


state 35

    (7) update_stam -> UPDATE SET assg_stam cond_stam .

    $end            reduce using rule 7 (update_stam -> UPDATE SET assg_stam cond_stam .)


state 36

    (33) assg_stam -> assg COMMA . assg_stam
    (33) assg_stam -> . assg COMMA assg_stam
    (34) assg_stam -> . assg
    (35) assg -> . STR EQ value

    STR             shift and go to state 25

    assg                           shift and go to state 24
    assg_stam                      shift and go to state 48

state 37

    (35) assg -> STR EQ . value
    (30) value -> . STR
    (31) value -> . NUMBER
    (32) value -> . BOOL

    STR             shift and go to state 32
    NUMBER          shift and go to state 33
    BOOL            shift and go to state 34

    value                          shift and go to state 49

state 38

    (16) or_cond -> or_cond OR . and_cond
    (18) and_cond -> . and_cond AND cond
    (19) and_cond -> . cond
    (20) cond -> . STR pred value

    STR             shift and go to state 28

    and_cond                       shift and go to state 50
    cond                           shift and go to state 51

state 39

    (20) cond -> STR pred . value
    (30) value -> . STR
    (31) value -> . NUMBER
    (32) value -> . BOOL

    STR             shift and go to state 32
    NUMBER          shift and go to state 33
    BOOL            shift and go to state 34

    value                          shift and go to state 52

state 40

    (21) pred -> EQ .

    STR             reduce using rule 21 (pred -> EQ .)
    NUMBER          reduce using rule 21 (pred -> EQ .)
    BOOL            reduce using rule 21 (pred -> EQ .)


state 41

    (22) pred -> NE .

    STR             reduce using rule 22 (pred -> NE .)
    NUMBER          reduce using rule 22 (pred -> NE .)
    BOOL            reduce using rule 22 (pred -> NE .)


state 42

    (23) pred -> LT .

    STR             reduce using rule 23 (pred -> LT .)
    NUMBER          reduce using rule 23 (pred -> LT .)
    BOOL            reduce using rule 23 (pred -> LT .)


state 43

    (24) pred -> LE .

    STR             reduce using rule 24 (pred -> LE .)
    NUMBER          reduce using rule 24 (pred -> LE .)
    BOOL            reduce using rule 24 (pred -> LE .)


state 44

    (25) pred -> GT .

    STR             reduce using rule 25 (pred -> GT .)
    NUMBER          reduce using rule 25 (pred -> GT .)
    BOOL            reduce using rule 25 (pred -> GT .)


state 45

    (26) pred -> GE .

    STR             reduce using rule 26 (pred -> GE .)
    NUMBER          reduce using rule 26 (pred -> GE .)
    BOOL            reduce using rule 26 (pred -> GE .)


state 46

    (27) pred -> LIKE .

    STR             reduce using rule 27 (pred -> LIKE .)
    NUMBER          reduce using rule 27 (pred -> LIKE .)
    BOOL            reduce using rule 27 (pred -> LIKE .)


state 47

    (28) values_list -> value COMMA . values_list
    (28) values_list -> . value COMMA values_list
    (29) values_list -> . value
    (30) value -> . STR
    (31) value -> . NUMBER
    (32) value -> . BOOL

    STR             shift and go to state 32
    NUMBER          shift and go to state 33
    BOOL            shift and go to state 34

    value                          shift and go to state 31
    values_list                    shift and go to state 53

state 48

    (33) assg_stam -> assg COMMA assg_stam .

    WHERE           reduce using rule 33 (assg_stam -> assg COMMA assg_stam .)
    $end            reduce using rule 33 (assg_stam -> assg COMMA assg_stam .)


state 49

    (35) assg -> STR EQ value .

    COMMA           reduce using rule 35 (assg -> STR EQ value .)
    WHERE           reduce using rule 35 (assg -> STR EQ value .)
    $end            reduce using rule 35 (assg -> STR EQ value .)


state 50

    (16) or_cond -> or_cond OR and_cond .
    (18) and_cond -> and_cond . AND cond

    OR              reduce using rule 16 (or_cond -> or_cond OR and_cond .)
    $end            reduce using rule 16 (or_cond -> or_cond OR and_cond .)
    AND             shift and go to state 54


state 51

    (19) and_cond -> cond .

    AND             reduce using rule 19 (and_cond -> cond .)
    OR              reduce using rule 19 (and_cond -> cond .)
    $end            reduce using rule 19 (and_cond -> cond .)


state 52

    (20) cond -> STR pred value .

    OR              reduce using rule 20 (cond -> STR pred value .)
    $end            reduce using rule 20 (cond -> STR pred value .)
    AND             reduce using rule 20 (cond -> STR pred value .)


state 53

    (28) values_list -> value COMMA values_list .

    $end            reduce using rule 28 (values_list -> value COMMA values_list .)


state 54

    (18) and_cond -> and_cond AND . cond
    (20) cond -> . STR pred value

    STR             shift and go to state 28

    cond                           shift and go to state 55

state 55

    (18) and_cond -> and_cond AND cond .

    AND             reduce using rule 18 (and_cond -> and_cond AND cond .)
    OR              reduce using rule 18 (and_cond -> and_cond AND cond .)
    $end            reduce using rule 18 (and_cond -> and_cond AND cond .)

